--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,37 @@
 /* Empty. Add your own CSS if you like */
+
+#addons {
+	height: 200px;
+}
+
+#navbarAddon {
+	height: 200px;
+	position: absolute;
+    bottom: 0px;
+	overflow: scroll;
+	width:100%;
+	white-space: nowrap;
+    -webkit-box-shadow: 
+    0px 0px 20px #000;
+}
+
+#addonsStates {
+	position: relative;
+	height:24%;
+	overflow: scroll;
+	white-space: nowrap;
+}
+
+#stateButtons {
+	height: 75%;
+	width: 25%;
+}
+
+#addonsBottom {
+	height:75%;
+	position: relative;
+	bottom: 0px;
+	overflow: scroll;
+	white-space: nowrap;
+}
+
