--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -1,1 +1,18 @@
 /* Empty. Add your own CSS if you like */
+
+
+#navbarAddon {
+
+	position: absolute;
+    bottom: 0px;
+	overflow: scroll;
+	width:100%;
+	white-space: nowrap;
+    -webkit-box-shadow: 
+    0px 0px 20px #000;
+}
+
+#scroll {
+	overflow: scroll;
+	white-space: nowrap;
+}
