--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -15,6 +15,10 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+.friendsAdded {
+  max-height: 60px !important;
+  max-width: 60px !important; }
+
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
