--- a/www/css/style.css
+++ b/www/css/style.css
@@ -95,11 +95,11 @@
     width: auto;
     position: relative;*/
     background-color: red;
-    padding: 10px;
+    /*padding: 2px;*/
     border-radius: 100px;
-    width: 50px;
+    /*width: 50px;*/
     z-index: 6;
-/*    border: 10px solid #000;*/
+    border: 2px solid #000;
 }
 .addonDivs {
     -ms-transform: scale(1) translate(0px, 0px);
@@ -129,25 +129,84 @@
   overflow: hidden;
 }
 */
-.inputBubble {
+
+
+#textarea {
+  vertical-align: center;
   text-align: center;
-  background-color: white;
-  border: 0px;
-  border-radius: 5px;
+  background: transparent;
+  /*border: 0px;*/
+  border-radius: 37px;
+  width: 145px;
+  height: 40px;
   resize: none;
-  padding: 10px;
+  padding: 15px;
   border: 2px solid #000;
+  overflow: hidden;
 }
 
-/*.circle {
+.inputBubble 
+{
   position: absolute;
-  top: 20;
-  left: 20;
-  height: 30px;
-  width: 30px;
-  border-radius: 30px;
-  display: inline-block;
-  background-color: blue;
+  /*background: transparent;*/
+  top: 0px;
+  left: 0px;
+  width: 145px;
+  background: #FFFFFF;
+  -webkit-border-radius: 37px;
+  -moz-border-radius: 37px;
+  border-radius: 37px;
+  /*border: #000000 solid 3px;*/
+}
+
+.inputBubble:after 
+{
+  position: absolute;
+  border-style: solid;
+  border-width: 67px 6px 0;
+  border-color: #FFFFFF transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+  margin-left: -6px;
+  bottom: -67px;
+  left: 69%;
+}
+
+.inputBubble:before 
+{
+  position: absolute;
+  border-style: solid;
+  border-width: 69px 8px 0;
+  border-color: #000000 transparent;
+  display: block;
+  width: 0;
+  z-index: 0;
+  margin-left: -8px;
+  bottom: -40px;
+  left: 69%;
+}
+
+.pointer {
+  top: 43px;
+}
+
+.pointerBorder {
+
+}
+
+/*.pointerBorder {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 69px 8px 0px;
+  border-color: rgb(0, 0, 0) transparent;
+  display: block;
+  width: 0px;
+  z-index: 0;
+  margin-left: -8px;
+  bottom: -67px;
+  left: 69%;
 }*/
 
 /*-------DELETE DIV--------*/
