--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -3,7 +3,7 @@
 
 /*------Addon/Delete Navbars-----*/
 #addons {
-	height: 200px;
+	height: 220px;
 }
 
 #myCanvas {
@@ -12,7 +12,7 @@
 }
 
 #navbarAddon {
-  height: 200px;
+  height: 190px;
   position: absolute;
     bottom: 0px;
   overflow: scroll;
@@ -47,9 +47,12 @@
 #addonsStates {
 	position: relative;
 	height:24%;
+  /*margin: 0px 0px 0px 10px;*/
 }
 
 #stateButtons {
+  padding: 0px 10px 0px 0px;
+  height: 1px;
 }
 
 #addonsBottom {
@@ -131,35 +134,27 @@
 */
 
 
-#textarea {
-  vertical-align: center;
-  text-align: center;
-  background: transparent;
-  /*border: 0px;*/
-  border-radius: 37px;
-  width: 145px;
-  height: 40px;
-  resize: none;
-  padding: 15px;
-  border: 2px solid #000;
-  overflow: hidden;
-}
 
 .inputBubble 
 {
   position: absolute;
-  /*background: transparent;*/
   top: 0px;
   left: 0px;
-  width: 145px;
-  background: #FFFFFF;
-  -webkit-border-radius: 37px;
-  -moz-border-radius: 37px;
-  border-radius: 37px;
-  /*border: #000000 solid 3px;*/
+  background: transparent;
 }
 
-.inputBubble:after 
+#textarea {
+  text-align: center;
+  background: white;
+  resize: none;
+  width: 140px;
+  height: 40px;
+  padding: 20px 20px 10px 20px;
+  border: 2px solid #000;
+  -webkit-border-radius: 25px; 
+  display: inline-block;
+}
+/*.inputBubbleInner 
 {
   position: absolute;
   border-style: solid;
@@ -173,7 +168,7 @@
   left: 69%;
 }
 
-.inputBubble:before 
+.inputBubbleOuter
 {
   position: absolute;
   border-style: solid;
@@ -185,7 +180,7 @@
   margin-left: -8px;
   bottom: -40px;
   left: 69%;
-}
+}*/
 
 .pointer {
   top: 43px;
@@ -195,7 +190,7 @@
 
 }
 
-/*.pointerBorder {
+.pointerBorder {
   content: "";
   position: absolute;
   border-style: solid;
@@ -207,7 +202,7 @@
   margin-left: -8px;
   bottom: -67px;
   left: 69%;
-}*/
+}
 
 /*-------DELETE DIV--------*/
 
