--- a/platforms/ios/www/lib/ionic/css/ionic.css
+++ b/platforms/ios/www/lib/ionic/css/ionic.css
@@ -30,6 +30,11 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'comic1';
+  src: url('../../../lib/comic1/comic1.ttf');
+}
+
 .ion, .ionicons,
 .ion-alert:before,
 .ion-alert-circled:before,
@@ -3005,6 +3010,7 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
+  font-family: 'comic1';
   font: inherit;
   font-size: 100%; }
 
@@ -3050,7 +3056,7 @@ html {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-family: sans-serif;
+  font-family: 'comic1';
   /* 1 */
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -3119,7 +3125,7 @@ kbd,
 pre,
 samp {
   font-size: 1em;
-  font-family: monospace, serif; }
+  font-family: 'comic1'; }
 
 /**
  * Improve readability of pre-formatted text in all browsers.
@@ -3189,7 +3195,7 @@ textarea {
   /* 3 */
   font-size: 100%;
   /* 2 */
-  font-family: inherit;
+  font-family: 'comic1';
   /* 1 */
   outline-offset: 0;
   /* 4 */
@@ -3335,8 +3341,8 @@ body,
   color: #000;
   word-wrap: break-word;
   font-size: 14px;
-  font-family: -apple-system;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+/*  font-family: -apple-system;*/
+  font-family: 'comic1';
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3592,7 +3598,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #000;
   font-weight: 500;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "comic1";
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -5101,7 +5107,7 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "comic1";
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -7531,7 +7537,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "comic1" }
 
 .item-input {
   display: -webkit-box;
