--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,24 @@
 /* Empty. Add your own CSS if you like */
-
+.animate-enter, 
+.animate-leave
+{ 
+    -webkit-transition: 650ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 650ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 650ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 650ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 650ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+} 
+ 
+.animate-enter {
+    left: 100%;
+}
+.animate-enter.animate-enter-active {
+    left: 0;
+}
+ 
+.animate-leave {
+    left: 0;
+}
 
 /*------Addon/Delete Navbars-----*/
 #addons {
