--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -22,7 +22,7 @@
 
 /*------Addon/Delete Navbars-----*/
 #addons {
-	height: 220px;
+	height: auto;
 }
 
 #myCanvas {
@@ -162,10 +162,6 @@
   background: transparent;
 }
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
 #textarea {
   text-align: center;
   background: white;
@@ -177,35 +173,6 @@
   -webkit-border-radius: 25px; 
   display: inline-block;
 }
->>>>>>> master
->>>>>>> master
-/*.inputBubbleInner 
-{
-  position: absolute;
-  border-style: solid;
-  border-width: 67px 6px 0;
-  border-color: #FFFFFF transparent;
-  display: block;
-  width: 0;
-  z-index: 1;
-  margin-left: -6px;
-  bottom: -67px;
-  left: 69%;
-}
-
-.inputBubbleOuter
-{
-  position: absolute;
-  border-style: solid;
-  border-width: 69px 8px 0;
-  border-color: #000000 transparent;
-  display: block;
-  width: 0;
-  z-index: 0;
-  margin-left: -8px;
-  bottom: -40px;
-  left: 69%;
-}*/
 
 .pointer {
   top: 43px;
@@ -269,7 +236,8 @@
 }*/
 
 #addonError {
-    background-image: linear-gradient(bottom, rgb(240,128,128) 25%, rgb(220,20,60) 100%);
+  background-color: red;
+/*    background-image: linear-gradient(bottom, rgb(240,128,128) 25%, rgb(220,20,60) 100%);
     background-image: -o-linear-gradient(bottom, rgb(240,128,128) 25%, rgb(220,20,60) 100%);
     background-image: -moz-linear-gradient(bottom, rgb(240,128,128) 25%, rgb(220,20,60) 100%);
     background-image: -webkit-linear-gradient(bottom, rgb(240,128,128) 25%, rgb(220,20,60) 100%);
@@ -280,13 +248,13 @@
       left top,
       color-stop(0.25, rgb(240,128,128)),
       color-stop(1, rgb(220,20,60))
-    );
+    );*/
   /*border: solid 1px rgba(0, 0, 0, 0.5);*/
   border-radius: 5px;
   box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   clear: both;
-  padding: 5px 30px;
+  padding: 15px 30px 15px;
   position: relative;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -295,24 +263,19 @@
 }
 
 #addonSuccessfulDelete {
-    background-image: linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
-    background-image: -o-linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
+  background-color: green;
+    /*background-image: linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);*/
+/*    background-image: -o-linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
     background-image: -moz-linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
     background-image: -webkit-linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
     background-image: -ms-linear-gradient(bottom, rgb(166, 218, 149) 25%, rgb(26, 148, 49) 100%);
-    background-image: -webkit-gradient(
-      linear,
-      left bottom,
-      left top,
-      color-stop(0.25, rgb(166, 218, 149)),
-      color-stop(1, rgb(26, 148, 49))
-    );
+/**/
   /*border: solid 1px rgba(0, 0, 0, 0.5);*/
   border-radius: 5px;
   box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   clear: both;
-  padding: 5px 30px;
+  padding: 15px 30px 15px;
   position: relative;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
