minor revisions to seed.js

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -522,7 +522,9 @@
 
 .animation-slinky {
   -webkit-animation: slinky 3500ms linear 1;
-  animation: slinky 3500ms linear 1;
+  /*animation: slinky 3500ms linear 1;*/
+  -webkit-animation-fill-mode: forwards;
+
 }
 
 /* Generated with Bounce.js. Edit at http://goo.gl/wwr4qL */
